// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsSocketSettings matches snapshot when status is CONNECTED 1`] = `
"<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <div class=\\"title\\">OBS Socket</div>
  <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
  <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
  <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\"></ipl-button-stub>
  <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTED\\" data-v-11cc5f1c=\\"\\">Connected</div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is CONNECTING 1`] = `
"<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <div class=\\"title\\">OBS Socket</div>
  <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
  <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
  <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\"></ipl-button-stub>
  <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTING\\" data-v-11cc5f1c=\\"\\">Connecting</div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is NOT_CONNECTED 1`] = `
"<div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
  <div class=\\"title\\">OBS Socket</div>
  <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
  <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
  <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\"></ipl-button-stub>
  <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_NOT_CONNECTED\\" data-v-11cc5f1c=\\"\\">Not connected</div>
</div>"
`;
